Fixed responsive not accounting for scrollbar

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
 	margin-right: auto;
 	margin-left: auto;
 }
-@media (max-width: 1087px) {
+@media (max-width: 1110px) {
 	.HeaderCenter {
 		width: 100%;
 	}
@@ -43,7 +43,7 @@ header h1 {
 	margin-bottom: 3px;
 	font-size: 32px;
 }
-@media (max-width: 715px) {
+@media (max-width: 735px) {
 	header h1 {
 		font-size: 0px;
 	}
@@ -100,7 +100,7 @@ footer {
 	left: -24px;
 }
 
-@media (max-width: 1087px) {
+@media (max-width: 1110px) {
 	.TopLeft {
 		float: none;
 	}
